fixed border radius bug transition on Safari

--- a/src/components/Proyects/components/assets/css/project.css
+++ b/src/components/Proyects/components/assets/css/project.css
@@ -12,6 +12,7 @@
     box-shadow: 2px 4px 12px rgba(0, 0, 0, .08);
     background-color: var(--card);
     overflow: hidden;
+    z-index: 1;
 }
 
 .project .image img {
